<resources>
    <string name="app_name">CocktailsPro</string>
    <string name="non_alcoholic_tab">Non-Alcoholic</string>
    <string name="alcoholic_tab">Alcoholic</string>
    <string name="cocoa_tab">Cocoa</string>
    <string name="favourite_tab">Favourite</string>

    <string name="error_user_message">Error occurred. Try it later.</string>
    <string name="no_internet_user_message">You don\'t have the Internet access. Try it later.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_add_cocktails_to_favourites_label">Add cocktails to Favourites</string>

    <!-- Ads Test account -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="addmob_app_id">ca-app-pub-4266011398557603~7371826703</string>

    <string name="add_to_favourites">Add to Favourites</string>
    <string name="remove_from_favourites">Remove from Favourites</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="instructions_label">Instructions</string>
    <string name="type_of_glass_label">Type of Glass:</string>
    <string name="category_label">Category:</string>
    <string name="iba_label">IBA:</string>
    <string name="default_beverage_cocktail_description">Beverage Image</string>
    <string name="appbar_beverage_content_description">Image of beverage in App Bar</string>
    <string name="add_to_favourites_content_description">Add Beverage to Favourites</string>
    <string name="widget_launcher_content_description">Image of icon launcher in title of widget</string>
    <string name="widget_default_image_content_description">Default image of beverage. It means that there are no favourite beverages to display</string>

    <string name="the_cocktail_db_api_key">1</string>
    <string name="favourite_list_is_empty">Favourite list is empty</string>

</resources>
